src/test/deca/syntax/valid/class/classes_with_typecast.deca
/// Description:
// 	  Test of cast (syntax) between different classes objects
// Resultats:
// 	  
// Historique:
// 	  cree le 12/01/2023
class Animal {}
class Canard extends Animal {}
class Poulet extends Animal {}

{
    Poulet a = new Animal();
    Canard b = new Poulet();
    Animal random_animal = (Animal) (b);
}